opgave 1, 2, 3, 4 og opgave 1 nsæten færdig for dag 3

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <li><a href="js-day3-ex3.html">Exercise-3</a></li>
 </ul>
 <h3>GitHub</h3>
-<a href="#">Here you should add a link to your PERSONAL GitHub repo</a>
+<a href="https://github.com/Johannes-Forsting/week5Exercises">Here is a link to my github repository</a>
 </body>
 </html>
