--- a/js-day3-ex1.html
+++ b/js-day3-ex1.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="test.js" type="module"></script>
+
 </head>
 <body>
 <a href="index.html">forside</a>
     <h1>Day 3 exercise 1</h1>
+    <p>See console for data</p>
+
+    <input id="input-id" placeholder="Write what id you want">
+    <ul id="my-ul"></ul>
+    <button id="load">Load data</button>
+    <button id="load-all">Load all</button>
+
 </body>
 </html>
