--- a/js-day2-ex3.html
+++ b/js-day2-ex3.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
 <body>
-<a href="index.html">forside</a>
-    <h1>Day 2 exercise 3</h1>
+<div class="container" style="padding:1em;font-family: sans-serif">
+    <button id="initialize-btn">Load Data</button>
+    <ul id="ul1"></ul>
+
+    <form>
+        <div><input id="name-input" placeholder="Enter new name here"></div>
+
+        <div style="margin: 20px 20px 20px 0"><span>Manipulate the Array and re-render the UL</span>
+            <button id="btn-b1">Add Name</button>
+            <button id="btn-b2">Remove First</button>
+            <button id="btn-b3">Remove Last</button>
+        </div>
+    </form>
+</div>
+
+<script>
+
+    const names = ["Johannes", "Jens", "Mads", "Simon", "mohammad", "Malthe"]
+    function makeList() {
+        const lis = names.map(n => `<li>${n}</li>`).join("")
+        document.getElementById("ul1").innerHTML = lis
+    }
+    document.getElementById("initialize-btn").onclick = ()=>makeList()
+
+
+
+    document.getElementById("btn-b1").onclick = (evt) => {
+        evt.preventDefault()
+        var name = document.getElementById("name-input").value
+        name = encode(name)
+        names.push(name);
+        makeList();
+    }
+
+
+    document.getElementById("btn-b2").onclick = (evt) => {
+        evt.preventDefault()
+        names.shift()
+        makeList();
+    }
+
+    document.getElementById("btn-b3").onclick = (evt) => {
+        evt.preventDefault()
+        names.pop()
+        makeList();
+    }
+    //Utility function you can use to escape "untrusted" data inputs
+    //Ref: https://cheatsheetseries.owasp.org/cheatsheets/Cross_Site_Scripting_Prevention_Cheat_Sheet.html
+    function encode(str) {
+        str = str.replace(/&/g, "&amp;");
+        str = str.replace(/>/g, "&gt;");
+        str = str.replace(/</g, "&lt;");
+        str = str.replace(/"/g, "&quot;");
+        str = str.replace(/'/g, "&#039;");
+        return str;
+    }
+</script>
 </body>
 </html>
