--- a/js-day2-ex4.html
+++ b/js-day2-ex4.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 <a href="index.html">forside</a>
     <h1>Day 2 exercise 4</h1>
+    <table class="table">
+        <thead id="header">
+        <tr>
+            <th>ID</th>
+            <th id="header-year">Year</th>
+            <th id="header-make">Make</th>
+            <th id="header-model">Model</th>
+            <th id="header-price">Price</th>
+        </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+    </table>
+    <div><label for="filter-price">Price</label><input id="filter-price">
+        <button id="btn-filter-price">Price less than</button>
+        <button id="btn-clear-filter">Clear Filter</button>
+    </div>
+
 </body>
+
+<script>
+    const cars = [
+        { id: 1, year: 1997, make: 'Ford', model: 'E350', price: 3000 },
+        { id: 2, year: 1999, make: 'Chevy', model: 'Venture', price: 4900 },
+        { id: 3, year: 2000, make: 'Chevy', model: 'Venture', price: 5000 },
+        { id: 4, year: 1996, make: 'Jeep', model: 'Grand Cherokee', price: 4799 },
+        { id: 5, year: 2005, make: 'Volvo', model: 'V70', price: 44799 }
+    ];
+
+
+    function makeTableRows (carsToMap) {
+        const tableRows = carsToMap.map(car => `
+        <tr>
+            <td>${car.id}</td>
+            <td>${car.year}</td>
+            <td>${car.make}</td>
+            <td>${car.model}</td>
+            <td>${car.price}</td>
+        </tr>
+        `).join("\n")
+        document.getElementById("tbody").innerHTML = tableRows
+    }
+
+    //Filter cars på price in label
+    document.getElementById("btn-filter-price").onclick = (evt) => {
+        const priceHighest = document.getElementById("filter-price").value
+        const carsSortedByPrice = cars.filter(car => car.price < priceHighest)
+        makeTableRows(carsSortedByPrice)
+    }
+
+    document.getElementById("btn-clear-filter").onclick = (evt) => {
+        makeTableRows(cars)
+    }
+
+    document.getElementById("header-model").onclick = (evt) => {
+        const carsSortedByModel = cars.sort(compare)
+        makeTableRows(carsSortedByModel)
+    }
+
+    function compare(a,b) {
+        if (a.model < b.model)
+            return -1;
+        if (a.model > b.model)
+            return 1;
+        return 0;
+    }
+
+
+
+    //Making the cars table
+    makeTableRows(cars)
+
+
+
+</script>
 </html>
