--- a/js-day3-ex1.html
+++ b/js-day3-ex1.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="test.js" type="module"></script>
+    <script src="js-day3-ex1.js" type="module"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
 <body>
@@ -12,7 +14,13 @@
     <p>See console for data</p>
 
     <input id="input-id" placeholder="Write what id you want">
-    <ul id="my-ul"></ul>
+    <table class="table">
+        <tr>
+            <th id="header-year">Name</th>
+            <th id="header-make">Email</th>
+        </tr>
+        <tbody id="tbody"></tbody>
+    </table>
     <button id="load">Load data</button>
     <button id="load-all">Load all</button>
 
