færdig med dag 3 opgave 1 og halvvejs i opgave 2

--- a/js-day3-ex1.html
+++ b/js-day3-ex1.html
@@ -16,8 +16,9 @@
     <input id="input-id" placeholder="Write what id you want">
     <table class="table">
         <tr>
-            <th id="header-year">Name</th>
-            <th id="header-make">Email</th>
+            <th id="header-name">Name</th>
+            <th id="header-email">Email</th>
+            <th id="header-phone">Phone</th>
         </tr>
         <tbody id="tbody"></tbody>
     </table>
